// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardView renders a loading indicator during the loading 1`] = `
<div
  className="loading"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`DashboardView renders an error card for an error 1`] = `
<div
  className="card errorcard"
>
  <div
    style={
      Object {
        "paddingBottom": "32px",
        "paddingLeft": "32px",
        "paddingRight": "32px",
        "paddingTop": "32px",
      }
    }
  >
    <div
      className="errorcard-container"
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <h1
          className="title-l"
        >
          An error has occurred
        </h1>
      </div>
      <p>
        Please contact the administrator to try to find a solution (code: 500)
      </p>
    </div>
  </div>
</div>
`;

exports[`DashboardView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    style={
      Object {
        "paddingBottom": "32px",
        "paddingLeft": "32px",
        "paddingRight": "32px",
        "paddingTop": "32px",
      }
    }
  >
    <div
      className="errorcard-container"
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <h1
          className="title-l"
        >
          The dashboard is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`DashboardView renders the projects 1`] = `
<div
  className="dashboardview"
>
  <div
    style={
      Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      }
    }
  >
    <div
      className="text xl bold"
    >
      Dashboard
    </div>
  </div>
  <div
    className="dashboardoverviewsection"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="text m semibold"
      >
        Overview
      </div>
      <div
        style={
          Object {
            "paddingBottom": undefined,
            "paddingLeft": undefined,
            "paddingRight": undefined,
            "paddingTop": "8px",
          }
        }
      >
        <div
          className="dashboardoverviewsection-container"
        >
          <div
            className="card infocard projectsinfocard"
          >
            <div
              style={
                Object {
                  "paddingBottom": "32px",
                  "paddingLeft": "32px",
                  "paddingRight": "32px",
                  "paddingTop": "32px",
                }
              }
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  0
                </h1>
                <p
                  className="infocard-message"
                >
                  Projects
                </p>
              </div>
            </div>
          </div>
          <div
            className="card infocard viewpointsinfocard"
          >
            <div
              style={
                Object {
                  "paddingBottom": "32px",
                  "paddingLeft": "32px",
                  "paddingRight": "32px",
                  "paddingTop": "32px",
                }
              }
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  27
                </h1>
                <p
                  className="infocard-message"
                >
                  Viewpoints
                </p>
              </div>
            </div>
          </div>
          <div
            className="card infocard metamodelsinfocard"
          >
            <div
              style={
                Object {
                  "paddingBottom": "32px",
                  "paddingLeft": "32px",
                  "paddingRight": "32px",
                  "paddingTop": "32px",
                }
              }
            >
              <div
                className="infocard-container"
              >
                <h1
                  className="infocard-title"
                >
                  132
                </h1>
                <p
                  className="infocard-message"
                >
                  Metamodels
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="dashboardprojectssection"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="text m semibold"
      >
        <a
          href="/projects"
          onClick={[Function]}
        >
          Projects
        </a>
      </div>
      <div
        style={
          Object {
            "paddingBottom": undefined,
            "paddingLeft": undefined,
            "paddingRight": undefined,
            "paddingTop": "8px",
          }
        }
      >
        <div
          className="dashboardprojectssection-container"
        >
          <a
            href="/newproject"
            onClick={[Function]}
          >
            <div
              className="card infocard dashboardprojectssection-newcard"
              to=""
            >
              <div
                style={
                  Object {
                    "paddingBottom": "32px",
                    "paddingLeft": "32px",
                    "paddingRight": "32px",
                    "paddingTop": "32px",
                  }
                }
              >
                <div
                  className="infocard-container"
                >
                  <h1
                    className="infocard-title"
                  >
                    +
                  </h1>
                  <p
                    className="infocard-message"
                  >
                    New Project
                  </p>
                </div>
              </div>
            </div>
          </a>
          <div
            className="card projectsummarycard"
          >
            <a
              href="/projects/First Project"
              onClick={[Function]}
            >
              <div
                style={
                  Object {
                    "paddingBottom": "16px",
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": "16px",
                  }
                }
              >
                <div
                  className="text l semibold hideoverflow"
                >
                  First Project
                </div>
              </div>
            </a>
            <div
              style={
                Object {
                  "paddingBottom": "16px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              <div
                className="text s regular"
              >
                No description provided
              </div>
            </div>
          </div>
          <div
            className="card projectsummarycard"
          >
            <a
              href="/projects/Second Project"
              onClick={[Function]}
            >
              <div
                style={
                  Object {
                    "paddingBottom": "16px",
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": "16px",
                  }
                }
              >
                <div
                  className="text l semibold hideoverflow"
                >
                  Second Project
                </div>
              </div>
            </a>
            <div
              style={
                Object {
                  "paddingBottom": "16px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              <div
                className="text s regular"
              >
                No description provided
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
